# 20242-team-8

./: .gitignore  Acessibilidade.cpp  Banco.cpp  Banco.h  CMakeLists.txt  Carro.cpp  Carro.h  DATABASE.sql  DATABASE.sqlite  DatabaseConnection.cpp  DatabaseConnection.h  Execucao.cpp  Execucao.h  Fluido.cpp  Fluido.h  Funcionario.cpp  Funcionario.h  Interface.cpp  Interface.h  KeyboardInput.cpp  KeyboardInput.h  Makefile  Manutencao.cpp  Manutencao.h  Marca.cpp  Marca.h  Mensagem.cpp  Mensagem.h  Peca.cpp  Peca.h  Produto.cpp  Produto.h  README.md  Registro.cpp  Registro.h  TEST  TextToVoice.cpp  TextToVoice.h  TipoCarro.cpp  TipoCarro.h  (+9 more)
include/: Acessibilidade.h  Banco.h  Carro.h  Fluido.h  Marca.h  Peca.h  Produto.h  TextToVoice.h  TipoCarro.h  sqlite3.h
src/: Acessibilidade.cpp  Banco.cpp  Carro.cpp  DatabaseConnection.cpp  Execucao.cpp  Fluido.cpp  Funcionario.cpp  Interface.cpp  KeyboardInput.cpp  Manutencao.cpp  Marca.cpp  Mensagem.cpp  Peca.cpp  Produto.cpp  Registro.cpp  TextToVoice.cpp  TipoCarro.cpp  TipoProduto.cpp  main.cpp
